# KernOS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
docs/: boot-process.md
kernel/: Cargo.toml  kernel.ld
kernel/.cargo/: config.toml
kernel/src/: apic.rs  gdt.rs  idt.rs  main.rs  pmm.rs  scheduler.rs  serial.rs  slab.rs  syscall.rs  vmm.rs
kernel/src/drivers/: block.rs  e1000.rs  framebuffer.rs  keyboard.rs  mod.rs  pci.rs
kernel/src/net/: arp.rs  ethernet.rs  icmp.rs  ip.rs  mod.rs  tcp.rs  udp.rs
kernel/src/shell/: builtins.rs  mod.rs  parser.rs
kernel/src/vfs/: kernfs.rs  mod.rs  path.rs
shared/: Cargo.toml
shared/src/: lib.rs
