[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# We produce a static binary, not a shared library
# This tells Cargo to compile the kernel as a raw executable
[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
shared = { version = "0.1.0", path = "../shared" }
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }